tests/errors/err_bool_to_int_param.mix
// ERROR: expected int, got bool
f(x: int) -> int
    x + 1

main()
    print(f(true))
